# gdx-spark-local

./: .gitignore  Dockerfile.asr-cuda13-build  Dockerfile.bot  Dockerfile.unified  Dockerfile.vllm-cuda13-build  Dockerfile.vllm-llamacpp  README.md  pyproject.toml
asr_eval/: __init__.py  config.py  models.py  run_batch_transcription.py  test_pipeline_adapter.py  verify_audio_integrity.py
asr_eval/adapters/: __init__.py  pipeline_stt_adapter.py  service_registry.py  synthetic_input_transport.py  transcription_collector.py  universal_pipecat.py
asr_eval/cli/: __init__.py  analyze_results.py  download_dataset.py  generate_ground_truth.py  run_evaluation.py
asr_eval/dataset/: __init__.py  downloader.py
asr_eval/evaluation/: __init__.py  agent_sdk_judge.py  wer_calculator.py
asr_eval/ground_truth/: __init__.py  evaluate_run.py  gemini_transcriber.py  run_iteration.py
asr_eval/harness/: __init__.py  result_collector.py  service_wrapper.py  synthetic_transport.py
asr_eval/services/: __init__.py  base.py  cartesia_adapter.py  cartesia_direct.py  deepgram_adapter.py  deepgram_direct.py  (+5 more)
docs/: adaptive_streaming_plan_2025-12-23.md  agent-sdk-judge.md  buffered-chunked-llm-implementation-plan.md  chunked-llm-engineering-deep-dive.md  chunked_llm_server.md  ground-truth-evaluation.md  llm_tts_integration_test_plan.md  magpie-tts-local-plan.md  magpie-tts-streaming-plan.md  parakeet-batch-vs-streaming-analysis.md  parakeet-streaming-vs-batch-analysis.md  parakeet_error_analysis.csv  streaming-pipeline-architecture.md  streaming_tts_plan_2025-12-24.md  stt-truncation-debugging.md  tts-interruption-fix-plan.md  two-slot-llm-implementation.md  unified-container-plan.md  v2v-latency-testing.md  websocket_debugging_plan.md
examples/: asr_client.py  llm_client.py
patches/: llama-cpp-hybrid-cache-fix.patch  llama-cpp-server-clear-slot-fix.patch
pipecat_bots/: PLAN.md  __init__.py  bot.py  bot_interleaved_streaming.py  bot_simple_vad.py  bot_vllm.py  frames.py  llama_cpp_buffered_llm.py  llama_cpp_chunked_llm.py  magpie_adaptive_tts.py  magpie_http_tts.py  magpie_local_tts.py  magpie_streaming_tts.py  magpie_websocket_tts.py  nvidia_stt.py  riva_local_tts.py  sentence_aggregator.py  sentence_buffer.py  v2v_metrics.py
scripts/: import_transcriptions.py  monitor_and_judge.py  nemotron.sh  run_20_turn_test.py  run_judge.py  setup_environment.sh  start_asr_tts.sh  start_unified.sh  voice_agent_test_client.py
tests/: __init__.py  benchmark_inference.py  check_audio.py  measure_streaming_ttfb.py  stress_test_chunked_llm.py  test_chunked_llm.py  test_environment.sh  test_full_audio.py  test_llm_tts_integration.py  test_streaming_asr.sh  test_streaming_blackwell.py  test_streaming_tts.py  test_tts_cancel.py  test_websocket_client.py  test_websocket_tts.py  timeline_test.py
vllm_plugins/: nano_v3_reasoning_parser.py
(+21 files in other folders)
